<resources>
    <string name="app_name">DreamTeam</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_connected">Continue connected</string>
    <string name="title_activity_main_view">DreamTeam</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sac_acv_com" translatable="false">sac@acv.com</string>
    <string name="final_project">Final Project</string>
    <string name="about">About</string>
    <string name="my_teams">My Teams</string>
    <string name="register_team">Register team</string>
    <string name="register_player">Register player</string>
    <string name="change_team">Edit team</string>
    <string name="change_player">Edit player</string>
    <string name="teams">Teams</string>
    <string name="logout">Logout</string>
    <string name="dream_team">DreamTeam</string>
    <string name="name">Name</string>
    <string name="shield">Shield</string>
    <string name="email">E-mail</string>
    <string name="new_team">Register new team</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="players">Players</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="sucess_team_saved">Team saved</string>
    <string name="name_dialog">Name: </string>
    <string name="email_dialog">E-mail:</string>
    <string name="close">Close</string>
    <string name="update_data">Update data</string>
    <string name="register_new_player">Register new player</string>
    <string name="phone">Phone: </string>
    <string name="position">Position: </string>
    <string name="number">Number: </string>
    <string name="team_name">Team name: </string>
    <string name="player_saved">Player saved!</string>
    <string name="user_required">User is required!</string>
    <string name="required_field">This field is required.</string>
    <string name="password_required">Password is required!</string>
    <string name="version">Version:</string>
    <string name="developer">Developer:</string>
    <string name="vinicius_castro" translatable="false">Vinícius Castro</string>
    <string name="version_number" translatable="false">1.1.02.17</string>
    <string name="return_back">Return</string>
    <string name="my_players">My players</string>
</resources>
