<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acv.finalproject.RegisterPlayerActivity">

    <TableRow>
        <TextView
            android:text="@string/register_new_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNewPlayer"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </TableRow>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:text="@string/team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTeamNameInfo"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/tvTeamNameValue" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerName"
                android:layout_weight="1" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etPlayerName" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerEmail"
                android:layout_weight="1" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etPlayerEmail" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerPhone"
                android:layout_weight="1" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/etPlayerPhone" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerPosition"
                android:layout_weight="1" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/etPlayerPosition" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerNumber"
                android:layout_weight="1" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etPlayerNumber" />
        </TableRow>
    </TableLayout>
    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSavePlayer"
        android:onClick="playerDialog"/>
    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancelPlayer"
        android:onClick="cancelNewPlayer"/>
</TableLayout>
