<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_team"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acv.finalproject.RegisterTeamActivity">

    <TableRow>
        <TextView
            android:text="@string/new_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_new_team"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </TableRow>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow>
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTeamName"
                 />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etTeamName" />
        </TableRow>
        <!--<TableRow>-->
            <!--<TextView-->
                <!--android:text="@string/shield"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/tvTeamShield"-->
                 <!--/>-->

        <!--</TableRow>-->
        <TableRow>
            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTeamEmail"
                 />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etTeamEmail" />
        </TableRow>
    </TableLayout>
    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:onClick="reserveDialog"/>
    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:onClick="cancel"/>
</TableLayout>
