<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.acv.finalproject.AboutActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        app:srcCompat="@mipmap/shield"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow>

            <TextView
                android:id="@+id/tvDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"/>

            <TextView
                android:id="@+id/tvDeveloperName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vinicius_castro"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"/>

            <TextView
                android:id="@+id/tvVersionNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_number"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow>

            <ImageView
                android:id="@+id/ivWaltones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TableRow android:gravity="right">

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="returnMainMenu"
                android:text="@string/return_back"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
