<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvTeamNameDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_name"
                />
            <TextView
                android:id="@+id/tvTeamNameD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvPlayerNameDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_dialog"
                />
            <TextView
                android:id="@+id/tvPlayerNameD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerEmailDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_dialog"
                />

            <TextView
                android:id="@+id/tvPlayerEmailD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerPhoneDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                />

            <TextView
                android:id="@+id/tvPlayerPhoneD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerPositionDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                />

            <TextView
                android:id="@+id/tvPlayerPositionD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerNumberDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                />

            <TextView
                android:id="@+id/tvPlayerNumberD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
            <TableRow>
                <Button
                    android:id="@+id/btnConfirmPlayerD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:onClick="onClickConfirmD"/>
                <Button
                    android:id="@+id/btnCancelPlayerD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:onClick="closeDialog"/>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>