<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/tvTeamID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvPlayerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTeamNameDescriptionD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_name"
                />

            <TextView
                android:id="@+id/tvTeamNameD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerNameDescriptionD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_dialog"
                />

            <EditText
                android:id="@+id/etPlayerNameD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerEmailDescriptionD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_dialog"
                />

            <EditText
                android:id="@+id/etPlayerEmailD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerPhoneDescriptionD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                />

            <EditText
                android:id="@+id/etPlayerPhoneD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerPositionDescriptionD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                />

            <EditText
                android:id="@+id/etPlayerPositionD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlayerNumberDescriptionD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                />

            <EditText
                android:id="@+id/etPlayerNumberD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="0,1">

            <TableRow>

                <Button
                    android:id="@+id/btnConfirmUpdatePlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="updatePlayer"
                    android:text="@string/yes"/>

                <Button
                    android:id="@+id/btnCancelUpdatePlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="closeDialog"
                    android:text="@string/no"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>